test/libsolidity/syntaxTests/dataLocations/internalFunction/function_argument_location_specifier_test_internal_storage.sol
contract test {
    function f(bytes storage) internal;
}
// ----
// TypeError: (0-57): Contract "test" should be marked as abstract.
